# python_ai

./: README.md  pyproject.toml
projects/: chat_box.py  chat_box_gemini.py  stream_lit.py
projects/1/: settings.py
projects/2/: 1_exercise_runnable.py  2_exercise_templates.py  3_exercise_parser.py  chat_prompt_template.py  output_parser.py  prompt_templates.py  rol_prompt_templates.py  runneable_langchain.py
