[project]
name = "python-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.*",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
